@@ -3,6 +3,8 @@ readsb (3.8.3~dev) UNRELEASED; urgency=medium
   * In development
   * Improvement of SBS decoding (by wiedehopf)
   * Add marker types for ground vehicles and towers.
+  * Contribution wiedehopf:
+    * Add custom keepalive settings that will time out a broken connection after 30 seconds.
 
  -- Michael Wolf <michael@mictronics.de>  Sun, 01 Mar 2020 10:07:51 +0100
 
